After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757454 - avdemux: fix string memory leak
avdemux: fix string memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
git master
Other Linux
: Normal normal
: 1.6.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-02 01:20 UTC by Vineeth
Modified: 2015-11-03 07:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix string leak (1.12 KB, patch)
2015-11-02 01:21 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-11-02 01:20:07 UTC
While doing ffmpeg demux init, found the below leak

==6704== 157 bytes in 31 blocks are definitely lost in loss record 3,292 of 3,774
==6704==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==6704==    by 0x41C9BE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==6704==    by 0x41E1E1C: g_strdup (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==6704==    by 0x4A0556F: gst_ffmpegdemux_base_init (gstavdemux.c:193)
==6704==    by 0x447FA3D: g_type_class_ref (in /usr/lib/i386-linux-gnu/libgobject-2.0.so.0.4002.0)
==6704==    by 0x408D040: gst_element_register (gstelementfactory.c:243)
==6704==    by 0x4A0AD7A: gst_ffmpegdemux_register (gstavdemux.c:2111)
==6704==    by 0x49E80D0: plugin_init (gstav.c:134)
==6704==    by 0x40B270D: gst_plugin_register_func (gstplugin.c:523)
==6704==    by 0x40B4857: _priv_gst_plugin_load_file_for_registry (gstplugin.c:826)
==6704==    by 0x40B519E: gst_plugin_load_file (gstplugin.c:680)
==6704==    by 0x40B771E: exchange_packets (gstpluginloader.c:727)
Comment 1 Vineeth 2015-11-02 01:21:03 UTC
Created attachment 314604 [details] [review]
fix string leak
Comment 2 Sebastian Dröge (slomo) 2015-11-02 07:23:32 UTC
commit e5b9e11383eb0b05efe24273f28d8664ca60b161
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Mon Nov 2 10:20:02 2015 +0900

    avdemux: Fix string memory leaks
    
    https://bugzilla.gnome.org/show_bug.cgi?id=757454