avdemux: Fix string memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=757454